2016-11-15 Check King <checkking@foxmail.com>
	* LogStream works

2016-11-14 Check King <checkking@foxmail.com>
	* Start with myrpc